assets/css/index.styl
@import "variables"

.sidebar
   .meta
      .sidebar-content-title 
         font-size: 20px

      .recommendation
         font-size: 14px
         span
            font-weight: bold            

.sidebarRandomizeButton
   &.hidden
      visibility: hidden

#cards
   position: relative
   
.card-wrap
   float: left
   -webkit-perspective: 1000
   -moz-perspective: 1000
   perspective: 1000
   -webkit-user-select: none
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
   
   .highlight
      display:none
      position: absolute
      top: 2px
      right: 2px
      bottom: 2px
      left: 2px
      border: 2px solid highlight-blue
      background: rgba(2,119,158,0.65)
      cursor: pointer

   &.selected .highlight
      cursor:pointer
      display:block

.card-wrap
   width: 20%

.eventsAndLandmarks-header
   float: left
   clear: left
   margin: 10px 0 0
   font-size: 20px

.eventsAndLandmarks
   .card-wrap
      width: 30%
      
      &:first-child
         clear: left

.card-front
   position: relative
   cursor: pointer

   .set-name-wrap
      position: absolute
      font-size: 18px
      margin-top: -13px
      top: 50%
      width: 100%
      height: 30px
      text-align: center

      .set-name
         padding: 6px 8px
         margin: 0 auto
         display: inline-block
         color: #fff
         background: rgba(30,30,30,0.7)
         text-shadow: 1px 1px 4px #000

   &.keep .highlight
      opacity: 0

   &.treasure .name
      color: treasure-color

   &.victory .name
      color: victory-color

   img
      width: 100%
      display: block

// Styles for flip
.flipper 
   margin: 2px
   -webkit-transition: transform 0.4s
   -webkit-transform-style: preserve-3d
   -moz-transition: transform 0.4s
   -moz-transform-style: preserve-3d
   transition: transform 0.4s
   transform-style: preserve-3d
   position: relative
   &.show-front
      -webkit-transform: rotateY(-180deg)
      -moz-transform: rotateY(-180deg)
      transform: rotateY(-180deg)

.card-front
.card-back
   -webkit-backface-visibility: hidden
   -moz-backface-visibility: hidden
   backface-visibility: hidden
   position: absolute
   top: 0
   right: 0
   bottom: 0
   left: 0
.card-back
   z-index: 2
   img
      width: 100%
      display: block
.card-front
   -webkit-transform: rotateY(-180deg)
   -moz-transform: rotateY(-180deg)
   transform: rotateY(-180deg)

// Styles for enlarging the cards when in condensed mode.
.enlarge-cards
   .card-wrap
      width: 50%
      
   .set-name
      font-size: 16px
      
   .set-name.baseset2
   .set-name.intrigue2
   .set-name.hinterlands
      font-size: 16px

   &.eventsAndLandmarks
      .card-wrap
         width: 100%
      .set-name
         font-size: 16px
      
.hovering-randomize-button
   position: fixed 
   top: 0
   left: 0
   right: 0
   z-index: 500
   padding: 6px 17px
   background: rgba(255, 255, 255, 0.8)
   border-bottom: 1px #ddd solid
   display: none
   
   &.visible
      display: block
      
   .button
      margin: 0


.dialog-hidden-content
   display:none

.dialog-content
   font-family: primary-font
   font-size: 23px

   .dialog-desc
      font-size: 16px
      line-height: 16px
   h1
      margin: 8px 0 8px 0
      color: #333
      border-bottom: 1px solid #ccc
      font-size: 24px
      cursor: pointer

   .checkbox-wrap.columns
      width: 50%
      float: left
      &.three
         width: 33.33333333%
      &.four
         width: 25%
      input[type=checkbox]
      input[type=radio]
         position: relative
         top: -2px

   .dialog-buttons
      margin-top: 12px
      .button
         float: right
         margin-left: 6px


@media (max-width: 950px)   
   .eventsAndLandmarks .card-wrap
      width: 40%
      
@media (max-width: 900px)   
   .set-name
      font-size: 16px
      
   .set-name.baseset2
   .set-name.intrigue2
   .set-name.hinterlands
      font-size: 14px
      

// Move sidebar to the top
@media (max-width: 750px)
   .content
      .sets
         .set
            width: 50%
            float: left
    
      .meta
         margin-top: 5px
         .sidebar-content-title 
            font-size: 26px
         .recommendation
            font-size: 18px

@media (max-width: 525px)
   .eventsAndLandmarks .card-wrap
      width: 50%
      
   .set-name
      font-size: 11px
   
   .set-name.baseset2
   .set-name.intrigue2
   .set-name.hinterlands
      font-size: 9px

@media (max-width: 450px)
   .card-wrap
      width: 25%

@media (max-width: 400px)
   .set-name
      font-size: 10px

